# mopro-r0-ecdsa-app

./: Cargo.toml  README.md
mopro-r0-example-app/: Cargo.toml
mopro-r0-example-app/flutter/lib/: main.dart
mopro-r0-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/com/example/mopro_flutter/: MoproFlutterPlugin.kt
mopro-r0-example-app/flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
mopro-r0-example-app/flutter/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
mopro-r0-example-app/flutter/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
mopro-r0-example-app/src/: lib.rs
risc0-circuit/: Cargo.toml  README.md
risc0-circuit/methods/: Cargo.toml
risc0-circuit/methods/guest/: Cargo.toml
risc0-circuit/methods/guest/src/: main.rs
risc0-circuit/src/: main.rs
