[package]
name = "mopro-r0-example-app"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", features = ["uniffi"] }
rust-witness = "0.1"
num-bigint = "0.4.0"
thiserror = "2.0.12"
bincode = "1.3"
p256 = { version = "0.13.2", features = ["serde"] }
rand_core = "0.6.4"

risc0-ecdsa-circuit = { path = "../risc0-circuit" }
risc0-zkvm = { workspace = true, features = ["prove", "metal", "unstable"] }
ecdsa-methods = { path = "../risc0-circuit/methods" }

[build-dependencies]
rust-witness = "0.1"
