[package]
name = "risc0-ecdsa-circuit"
version = { workspace = true }
edition = { workspace = true }

default-run = "risc0-ecdsa-circuit"

[dependencies]
ecdsa-methods = { path = "./methods" }
risc0-zkvm = { version = "3.0.3", features = ["client"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
p256 = { version = "0.13.2", features = ["serde"] }
rand_core = "0.6.4"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
risc0-build = { version = "3.0.3" }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
prove = ["risc0-zkvm/prove"]
