[package]
name = "ecdsa-verify"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "ecdsa_verify"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
p256 = { version = "=0.13.2", features = [
	"serde",
	"expose-field",
	"std",
	"ecdsa",
], default-features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
# Empirically observed to result in the best performance for this binary (in particular, better than
# "fat"). It's often a good idea to experiment with different optimization levels and options.
codegen-units = 1
lto = "thin"
